--- a/applications/stream-applications-build/stream-applications-descriptor/src/main/resources/META-INF/kafka-apps-docker.properties
+++ b/applications/stream-applications-build/stream-applications-descriptor/src/main/resources/META-INF/kafka-apps-docker.properties
@@ -8,8 +8,12 @@ source.load-generator=docker:springcloudstream/load-generator-source-kafka:@load
 source.mongodb=docker:springcloudstream/mongodb-source-kafka:@mongodb-source-docker.tag@
 source.mqtt=docker:springcloudstream/mqtt-source-kafka:@mqtt-source-docker.tag@
 source.rabbit=docker:springcloudstream/rabbit-source-kafka:@rabbit-source-docker.tag@
+source.s3=docker:springcloudstream/s3-source-kafka:@s3-source-docker.tag@
 source.tcp=docker:springcloudstream/tcp-source-kafka:@tcp-source-docker.tag@
 source.time=docker:springcloudstream/time-source-kafka:@time-source-docker.tag@
+source.twitter-message=docker:springcloudstream/twitter-message-source-kafka:@twitter-message-source-docker.tag@
+source.twitter-search=docker:springcloudstream/twitter-search-source-kafka:@twitter-search-source-docker.tag@
+source.twitter-stream=docker:springcloudstream/twitter-stream-source-kafka:@twitter-stream-source-docker.tag@
 source.websocket=docker:springcloudstream/websocket-source-kafka:@websocket-source-docker.tag@
 sink.cassandra=docker:springcloudstream/cassandra-sink-kafka:@cassandra-sink-docker.tag@
 sink.counter=docker:springcloudstream/counter-sink-kafka:@counter-sink-docker.tag@
@@ -23,10 +27,13 @@ sink.mqtt=docker:springcloudstream/mqtt-sink-kafka:@mqtt-sink-docker.tag@
 sink.rabbit=docker:springcloudstream/rabbit-sink-kafka:@rabbit-sink-docker.tag@
 sink.redis=docker:springcloudstream/redis-sink-kafka:@redis-sink-docker.tag@
 sink.router=docker:springcloudstream/router-sink-kafka:@router-sink-docker.tag@
+sink.s3=docker:springcloudstream/s3-sink-kafka:@s3-sink-docker.tag@
 sink.sftp=docker:springcloudstream/sftp-sink-kafka:@sftp-sink-docker.tag@
-sink.tcp=docker:springcloudstream/tcp-sink-kafka:@tcp-sink-docker.tag@
 sink.tasklauncher=docker:springcloudstream/tasklauncher-sink-kafka:@tasklauncher-sink-docker.tag@
+sink.tcp=docker:springcloudstream/tcp-sink-kafka:@tcp-sink-docker.tag@
 sink.throughput=docker:springcloudstream/throughput-sink-kafka:@throughput-sink-docker.tag@
+sink.twitter-message=docker:springcloudstream/twitter-message-sink-kafka:@twitter-message-sink-docker.tag@
+sink.twitter-update=docker:springcloudstream/twitter-update-sink-kafka:@twitter-update-sink-docker.tag@
 sink.websocket=docker:springcloudstream/websocket-sink-kafka:@websocket-sink-docker.tag@
 processor.bridge=docker:springcloudstream/bridge-processor-kafka:@bridge-processor-docker.tag@
 processor.filter=docker:springcloudstream/filter-processor-kafka:@filter-processor-docker.tag@
@@ -36,3 +43,4 @@ processor.http-request=docker:springcloudstream/http-request-processor-kafka:@ht
 processor.script=docker:springcloudstream/script-processor-kafka:@script-processor-docker.tag@
 processor.splitter=docker:springcloudstream/splitter-processor-kafka:@splitter-processor-docker.tag@
 processor.transform=docker:springcloudstream/transform-processor-kafka:@transform-processor-docker.tag@
+processor.twitter-trend=docker:springcloudstream/twitter-trend-processor-kafka:@twitter-trend-processor-docker.tag@
