--- a/applications/stream-applications-build/stream-applications-descriptor/src/main/resources/META-INF/kafka-apps-maven.properties
+++ b/applications/stream-applications-build/stream-applications-descriptor/src/main/resources/META-INF/kafka-apps-maven.properties
@@ -18,10 +18,18 @@ source.mqtt=maven://org.springframework.cloud.stream.app:mqtt-source-kafka:@mqtt
 source.mqtt.metadata=maven://org.springframework.cloud.stream.app:mqtt-source-kafka:jar:metadata:@mqtt-source.version@
 source.rabbit=maven://org.springframework.cloud.stream.app:rabbit-source-kafka:@rabbit-source.version@
 source.rabbit.metadata=maven://org.springframework.cloud.stream.app:rabbit-source-kafka:jar:metadata:@rabbit-source.version@
+source.s3=maven://org.springframework.cloud.stream.app:s3-source-kafka:@s3-source.version@
+source.s3.metadata=maven://org.springframework.cloud.stream.app:s3-source-kafka:jar:metadata:@s3-source.version@
 source.tcp=maven://org.springframework.cloud.stream.app:tcp-source-kafka:@tcp-source.version@
 source.tcp.metadata=maven://org.springframework.cloud.stream.app:tcp-source-kafka:jar:metadata:@tcp-source.version@
 source.time=maven://org.springframework.cloud.stream.app:time-source-kafka:@time-source.version@
 source.time.metadata=maven://org.springframework.cloud.stream.app:time-source-kafka:jar:metadata:@time-source.version@
+source.twitter-message=maven://org.springframework.cloud.stream.app:twitter-message-source-kafka:@twitter-message-source.version@
+source.twitter-message.metadata=maven://org.springframework.cloud.stream.app:twitter-message-source-kafka:jar:metadata:@twitter-message-source.version@
+source.twitter-search=maven://org.springframework.cloud.stream.app:twitter-search-source-kafka:@twitter-search-source.version@
+source.twitter-search.metadata=maven://org.springframework.cloud.stream.app:twitter-search-source-kafka:jar:metadata:@twitter-search-source.version@
+source.twitter-stream=maven://org.springframework.cloud.stream.app:twitter-stream-source-kafka:@twitter-stream-source.version@
+source.twitter-stream.metadata=maven://org.springframework.cloud.stream.app:twitter-stream-source-kafka:jar:metadata:@twitter-stream-source.version@
 source.websocket=maven://org.springframework.cloud.stream.app:websocket-source-kafka:@websocket-source.version@
 source.websocket.metadata=maven://org.springframework.cloud.stream.app:websocket-source-kafka:jar:metadata:@websocket-source.version@
 sink.cassandra=maven://org.springframework.cloud.stream.app:cassandra-sink-kafka:@cassandra-sink.version@
@@ -48,14 +56,20 @@ sink.redis=maven://org.springframework.cloud.stream.app:redis-sink-kafka:@redis-
 sink.redis.metadata=maven://org.springframework.cloud.stream.app:redis-sink-kafka:jar:metadata:@redis-sink.version@
 sink.router=maven://org.springframework.cloud.stream.app:router-sink-kafka:@router-sink.version@
 sink.router.metadata=maven://org.springframework.cloud.stream.app:router-sink-kafka:jar:metadata:@router-sink.version@
+sink.s3=maven://org.springframework.cloud.stream.app:s3-sink-kafka:@s3-sink.version@
+sink.s3.metadata=maven://org.springframework.cloud.stream.app:s3-sink-kafka:jar:metadata:@s3-sink.version@
 sink.sftp=maven://org.springframework.cloud.stream.app:sftp-sink-kafka:@sftp-sink.version@
 sink.sftp.metadata=maven://org.springframework.cloud.stream.app:sftp-sink-kafka:jar:metadata:@sftp-sink.version@
-sink.tcp=maven://org.springframework.cloud.stream.app:tcp-sink-kafka:@tcp-sink.version@
-sink.tcp.metadata=maven://org.springframework.cloud.stream.app:tcp-sink-kafka:jar:metadata:@tcp-sink.version@
 sink.tasklauncher=maven://org.springframework.cloud.stream.app:tasklauncher-sink-kafka:@tasklauncher-sink.version@
 sink.tasklauncher.metadata=maven://org.springframework.cloud.stream.app:tasklauncher-sink-kafka:jar:metadata:@tasklauncher-sink.version@
+sink.tcp=maven://org.springframework.cloud.stream.app:tcp-sink-kafka:@tcp-sink.version@
+sink.tcp.metadata=maven://org.springframework.cloud.stream.app:tcp-sink-kafka:jar:metadata:@tcp-sink.version@
 sink.throughput=maven://org.springframework.cloud.stream.app:throughput-sink-kafka:@throughput-sink.version@
 sink.throughput.metadata=maven://org.springframework.cloud.stream.app:throughput-sink-kafka:jar:metadata:@throughput-sink.version@
+sink.twitter-message=maven://org.springframework.cloud.stream.app:twitter-message-sink-kafka:@twitter-message-sink.version@
+sink.twitter-message.metadata=maven://org.springframework.cloud.stream.app:twitter-message-sink-kafka:jar:metadata:@twitter-message-sink.version@
+sink.twitter-update=maven://org.springframework.cloud.stream.app:twitter-update-sink-kafka:@twitter-update-sink.version@
+sink.twitter-update.metadata=maven://org.springframework.cloud.stream.app:twitter-update-sink-kafka:jar:metadata:@twitter-update-sink.version@
 sink.websocket=maven://org.springframework.cloud.stream.app:websocket-sink-kafka:@websocket-sink.version@
 sink.websocket.metadata=maven://org.springframework.cloud.stream.app:websocket-sink-kafka:jar:metadata:@websocket-sink.version@
 processor.bridge=maven://org.springframework.cloud.stream.app:bridge-processor-kafka:@bridge-processor.version@
@@ -74,4 +88,6 @@ processor.splitter=maven://org.springframework.cloud.stream.app:splitter-process
 processor.splitter.metadata=maven://org.springframework.cloud.stream.app:splitter-processor-kafka:jar:metadata:@splitter-processor.version@
 processor.transform=maven://org.springframework.cloud.stream.app:transform-processor-kafka:@transform-processor.version@
 processor.transform.metadata=maven://org.springframework.cloud.stream.app:transform-processor-kafka:jar:metadata:@transform-processor.version@
+processor.twitter-trend=maven://org.springframework.cloud.stream.app:twitter-trend-processor-kafka:@twitter-trend-processor.version@
+processor.twitter-trend.metadata=maven://org.springframework.cloud.stream.app:twitter-trend-processor-kafka:jar:metadata:@twitter-trend-processor.version@
 
