--- a/applications/stream-applications-build/stream-applications-descriptor/src/main/resources/META-INF/rabbit-apps-docker.properties
+++ b/applications/stream-applications-build/stream-applications-descriptor/src/main/resources/META-INF/rabbit-apps-docker.properties
@@ -8,8 +8,12 @@ source.load-generator=docker:springcloudstream/load-generator-source-rabbit:@loa
 source.mongodb=docker:springcloudstream/mongodb-source-rabbit:@mongodb-source-docker.tag@
 source.mqtt=docker:springcloudstream/mqtt-source-rabbit:@mqtt-source-docker.tag@
 source.rabbit=docker:springcloudstream/rabbit-source-rabbit:@rabbit-source-docker.tag@
+source.s3=docker:springcloudstream/s3-source-rabbit:@s3-source-docker.tag@
 source.tcp=docker:springcloudstream/tcp-source-rabbit:@tcp-source-docker.tag@
 source.time=docker:springcloudstream/time-source-rabbit:@time-source-docker.tag@
+source.twitter-message=docker:springcloudstream/twitter-message-source-rabbit:@twitter-message-source-docker.tag@
+source.twitter-search=docker:springcloudstream/twitter-search-source-rabbit:@twitter-search-source-docker.tag@
+source.twitter-stream=docker:springcloudstream/twitter-stream-source-rabbit:@twitter-stream-source-docker.tag@
 source.websocket=docker:springcloudstream/websocket-source-rabbit:@websocket-source-docker.tag@
 sink.cassandra=docker:springcloudstream/cassandra-sink-rabbit:@cassandra-sink-docker.tag@
 sink.counter=docker:springcloudstream/counter-sink-rabbit:@counter-sink-docker.tag@
@@ -23,10 +27,13 @@ sink.mqtt=docker:springcloudstream/mqtt-sink-rabbit:@mqtt-sink-docker.tag@
 sink.rabbit=docker:springcloudstream/rabbit-sink-rabbit:@rabbit-sink-docker.tag@
 sink.redis=docker:springcloudstream/redis-sink-rabbit:@redis-sink-docker.tag@
 sink.router=docker:springcloudstream/router-sink-rabbit:@router-sink-docker.tag@
+sink.s3=docker:springcloudstream/s3-sink-rabbit:@s3-sink-docker.tag@
 sink.sftp=docker:springcloudstream/sftp-sink-rabbit:@sftp-sink-docker.tag@
-sink.tcp=docker:springcloudstream/tcp-sink-rabbit:@tcp-sink-docker.tag@
 sink.tasklauncher=docker:springcloudstream/tasklauncher-sink-rabbit:@tasklauncher-sink-docker.tag@
+sink.tcp=docker:springcloudstream/tcp-sink-rabbit:@tcp-sink-docker.tag@
 sink.throughput=docker:springcloudstream/throughput-sink-rabbit:@throughput-sink-docker.tag@
+sink.twitter-message=docker:springcloudstream/twitter-message-sink-rabbit:@twitter-message-sink-docker.tag@
+sink.twitter-update=docker:springcloudstream/twitter-update-sink-rabbit:@twitter-update-sink-docker.tag@
 sink.websocket=docker:springcloudstream/websocket-sink-rabbit:@websocket-sink-docker.tag@
 processor.bridge=docker:springcloudstream/bridge-processor-rabbit:@bridge-processor-docker.tag@
 processor.filter=docker:springcloudstream/filter-processor-rabbit:@filter-processor-docker.tag@
@@ -36,3 +43,4 @@ processor.http-request=docker:springcloudstream/http-request-processor-rabbit:@h
 processor.script=docker:springcloudstream/script-processor-rabbit:@script-processor-docker.tag@
 processor.splitter=docker:springcloudstream/splitter-processor-rabbit:@splitter-processor-docker.tag@
 processor.transform=docker:springcloudstream/transform-processor-rabbit:@transform-processor-docker.tag@
+processor.twitter-trend=docker:springcloudstream/twitter-trend-processor-rabbit:@twitter-trend-processor-docker.tag@
