--- a/applications/stream-applications-build/stream-applications-descriptor/pom.xml
+++ b/applications/stream-applications-build/stream-applications-descriptor/pom.xml
@@ -63,10 +63,18 @@
                 "${mqtt-source.version}".contains('SNAPSHOT') ? 'latest' : "${mqtt-source.version}"
         pom.properties['rabbit-source-docker.tag']=
                 "${rabbit-source.version}".contains('SNAPSHOT') ? 'latest' : "${rabbit-source.version}"
+        pom.properties['s3-source-docker.tag']=
+                "${s3-source.version}".contains('SNAPSHOT') ? 'latest' : "${s3-source.version}"
         pom.properties['tcp-source-docker.tag']=
                 "${tcp-source.version}".contains('SNAPSHOT') ? 'latest' : "${tcp-source.version}"
         pom.properties['time-source-docker.tag']=
                 "${time-source.version}".contains('SNAPSHOT') ? 'latest' : "${time-source.version}"
+        pom.properties['twitter-message-source-docker.tag']=
+                "${twitter-message-source.version}".contains('SNAPSHOT') ? 'latest' : "${twitter-message-source.version}"
+        pom.properties['twitter-search-source-docker.tag']=
+                "${twitter-search-source.version}".contains('SNAPSHOT') ? 'latest' : "${twitter-search-source.version}"
+        pom.properties['twitter-stream-source-docker.tag']=
+                "${twitter-stream-source.version}".contains('SNAPSHOT') ? 'latest' : "${twitter-stream-source.version}"
         pom.properties['websocket-source-docker.tag']=
                 "${websocket-source.version}".contains('SNAPSHOT') ? 'latest' : "${websocket-source.version}"
         pom.properties['cassandra-sink-docker.tag']=
@@ -93,22 +101,26 @@
                 "${redis-sink.version}".contains('SNAPSHOT') ? 'latest' : "${redis-sink.version}"
         pom.properties['router-sink-docker.tag']=
                 "${router-sink.version}".contains('SNAPSHOT') ? 'latest' : "${router-sink.version}"
+        pom.properties['s3-sink-docker.tag']=
+                "${s3-sink.version}".contains('SNAPSHOT') ? 'latest' : "${s3-sink.version}"
         pom.properties['sftp-sink-docker.tag']=
                 "${sftp-sink.version}".contains('SNAPSHOT') ? 'latest' : "${sftp-sink.version}"
+        pom.properties['tasklauncher-sink-docker.tag']=
+                "${tasklauncher-sink.version}".contains('SNAPSHOT') ? 'latest' : "${tasklauncher-sink.version}"
         pom.properties['tcp-sink-docker.tag']=
                 "${tcp-sink.version}".contains('SNAPSHOT') ? 'latest' : "${tcp-sink.version}"
         pom.properties['throughput-sink-docker.tag']=
                 "${throughput-sink.version}".contains('SNAPSHOT') ? 'latest' : "${throughput-sink.version}"
-        pom.properties['tasklauncher-sink-docker.tag']=
-                "${tasklauncher-sink.version}".contains('SNAPSHOT') ? 'latest' : "${tasklauncher-sink.version}"
+        pom.properties['twitter-message-sink-docker.tag']=
+                "${twitter-message-sink.version}".contains('SNAPSHOT') ? 'latest' : "${twitter-message-sink.version}"
+        pom.properties['twitter-update-sink-docker.tag']=
+                "${twitter-update-sink.version}".contains('SNAPSHOT') ? 'latest' : "${twitter-update-sink.version}"
         pom.properties['websocket-sink-docker.tag']=
                 "${websocket-sink.version}".contains('SNAPSHOT') ? 'latest' : "${websocket-sink.version}"
         pom.properties['bridge-processor-docker.tag']=
                 "${bridge-processor.version}".contains('SNAPSHOT') ? 'latest' : "${bridge-processor.version}"
         pom.properties['filter-processor-docker.tag']=
                 "${filter-processor.version}".contains('SNAPSHOT') ? 'latest' : "${filter-processor.version}"
-        pom.properties['groovy-processor-docker.tag']=
-                "${groovy-processor.version}".contains('SNAPSHOT') ? 'latest' : "${groovy-processor.version}"
         pom.properties['groovy-processor-docker.tag']=
                 "${groovy-processor.version}".contains('SNAPSHOT') ? 'latest' : "${groovy-processor.version}"
         pom.properties['header-enricher-processor-docker.tag']=
@@ -121,6 +133,8 @@
                 "${splitter-processor.version}".contains('SNAPSHOT') ? 'latest' : "${splitter-processor.version}"
         pom.properties['transform-processor-docker.tag']=
                 "${transform-processor.version}".contains('SNAPSHOT') ? 'latest' : "${transform-processor.version}"
+        pom.properties['twitter-trend-processor-docker.tag']=
+                "${twitter-trend-processor.version}".contains('SNAPSHOT') ? 'latest' : "${twitter-trend-processor.version}"
                                 ]]></source>
                         </configuration>
                     </execution>
