--- a/applications/stream-applications-build/stream-applications-descriptor/src/main/resources/META-INF/kafka-apps-maven-repo-url.properties
+++ b/applications/stream-applications-build/stream-applications-descriptor/src/main/resources/META-INF/kafka-apps-maven-repo-url.properties
@@ -18,10 +18,18 @@ source.mqtt=https://@repo-spring-io@/org/springframework/cloud/stream/app/mqtt-s
 source.mqtt.metadata=https://@repo-spring-io@/org/springframework/cloud/stream/app/mqtt-source-kafka/@mqtt-source.version@/mqtt-source-kafka-@mqtt-source.version@-metadata.jar
 source.rabbit=https://@repo-spring-io@/org/springframework/cloud/stream/app/rabbit-source-kafka/@rabbit-source.version@/rabbit-source-kafka-@rabbit-source.version@.jar
 source.rabbit.metadata=https://@repo-spring-io@/org/springframework/cloud/stream/app/rabbit-source-kafka/@rabbit-source.version@/rabbit-source-kafka-@rabbit-source.version@-metadata.jar
+source.s3=https://@repo-spring-io@/org/springframework/cloud/stream/app/s3-source-kafka/@s3-source.version@/s3-source-kafka-@s3-source.version@.jar
+source.s3.metadata=https://@repo-spring-io@/org/springframework/cloud/stream/app/s3-source-kafka/@s3-source.version@/s3-source-kafka-@s3-source.version@-metadata.jar
 source.tcp=https://@repo-spring-io@/org/springframework/cloud/stream/app/tcp-source-kafka/@tcp-source.version@/tcp-source-kafka-@tcp-source.version@.jar
 source.tcp.metadata=https://@repo-spring-io@/org/springframework/cloud/stream/app/tcp-source-kafka/@tcp-source.version@/tcp-source-kafka-@tcp-source.version@-metadata.jar
 source.time=https://@repo-spring-io@/org/springframework/cloud/stream/app/time-source-kafka/@time-source.version@/time-source-kafka-@time-source.version@.jar
 source.time.metadata=https://@repo-spring-io@/org/springframework/cloud/stream/app/time-source-kafka/@time-source.version@/time-source-kafka-@time-source.version@-metadata.jar
+source.twitter-message=https://@repo-spring-io@/org/springframework/cloud/stream/app/twitter-message-source-kafka/@twitter-message-source.version@/twitter-message-source-kafka-@twitter-message-source.version@.jar
+source.twitter-message.metadata=https://@repo-spring-io@/org/springframework/cloud/stream/app/twitter-message-source-kafka/@twitter-message-source.version@/twitter-message-source-kafka-@twitter-message-source.version@-metadata.jar
+source.twitter-search=https://@repo-spring-io@/org/springframework/cloud/stream/app/twitter-search-source-kafka/@twitter-search-source.version@/twitter-search-source-kafka-@twitter-search-source.version@.jar
+source.twitter-search.metadata=https://@repo-spring-io@/org/springframework/cloud/stream/app/twitter-search-source-kafka/@twitter-search-source.version@/twitter-search-source-kafka-@twitter-search-source.version@-metadata.jar
+source.twitter-stream=https://@repo-spring-io@/org/springframework/cloud/stream/app/twitter-stream-source-kafka/@twitter-stream-source.version@/twitter-stream-source-kafka-@twitter-stream-source.version@.jar
+source.twitter-stream.metadata=https://@repo-spring-io@/org/springframework/cloud/stream/app/twitter-stream-source-kafka/@twitter-stream-source.version@/twitter-stream-source-kafka-@twitter-stream-source.version@-metadata.jar
 source.websocket=https://@repo-spring-io@/org/springframework/cloud/stream/app/websocket-source-kafka/@websocket-source.version@/websocket-source-kafka-@websocket-source.version@.jar
 source.websocket.metadata=https://@repo-spring-io@/org/springframework/cloud/stream/app/websocket-source-kafka/@websocket-source.version@/websocket-source-kafka-@websocket-source.version@-metadata.jar
 sink.cassandra=https://@repo-spring-io@/org/springframework/cloud/stream/app/cassandra-sink-kafka/@cassandra-sink.version@/cassandra-sink-kafka-@cassandra-sink.version@.jar
@@ -48,14 +56,20 @@ sink.redis=https://@repo-spring-io@/org/springframework/cloud/stream/app/redis-s
 sink.redis.metadata=https://@repo-spring-io@/org/springframework/cloud/stream/app/redis-sink-kafka/@redis-sink.version@/redis-sink-kafka-@redis-sink.version@-metadata.jar
 sink.router=https://@repo-spring-io@/org/springframework/cloud/stream/app/router-sink-kafka/@router-sink.version@/router-sink-kafka-@router-sink.version@.jar
 sink.router.metadata=https://@repo-spring-io@/org/springframework/cloud/stream/app/router-sink-kafka/@router-sink.version@/router-sink-kafka-@router-sink.version@-metadata.jar
+sink.s3=https://@repo-spring-io@/org/springframework/cloud/stream/app/s3-sink-kafka/@s3-sink.version@/s3-sink-kafka-@s3-sink.version@.jar
+sink.s3.metadata=https://@repo-spring-io@/org/springframework/cloud/stream/app/s3-sink-kafka/@s3-sink.version@/s3-sink-kafka-@s3-sink.version@-metadata.jar
 sink.sftp=https://@repo-spring-io@/org/springframework/cloud/stream/app/sftp-sink-kafka/@sftp-sink.version@/sftp-sink-kafka-@sftp-sink.version@.jar
 sink.sftp.metadata=https://@repo-spring-io@/org/springframework/cloud/stream/app/sftp-sink-kafka/@sftp-sink.version@/sftp-sink-kafka-@sftp-sink.version@-metadata.jar
-sink.tcp=https://@repo-spring-io@/org/springframework/cloud/stream/app/tcp-sink-kafka/@tcp-sink.version@/tcp-sink-kafka-@sftp-sink.version@.jar
-sink.tcp.metadata=https://@repo-spring-io@/org/springframework/cloud/stream/app/tcp-sink-kafka/@tcp-sink.version@/tcp-sink-kafka-@tcp-sink.version@-metadata.jar
 sink.tasklauncher=https://@repo-spring-io@/org/springframework/cloud/stream/app/tasklauncher-sink-kafka/@tasklauncher-sink.version@/tasklauncher-sink-kafka-@tasklauncher-sink.version@.jar
 sink.tasklauncher.metadata=https://@repo-spring-io@/org/springframework/cloud/stream/app/tasklauncher-sink-kafka/@tasklauncher-sink.version@/tasklauncher-sink-kafka-@tasklauncher-sink.version@-metadata.jar
+sink.tcp=https://@repo-spring-io@/org/springframework/cloud/stream/app/tcp-sink-kafka/@tcp-sink.version@/tcp-sink-kafka-@tcp-sink.version@.jar
+sink.tcp.metadata=https://@repo-spring-io@/org/springframework/cloud/stream/app/tcp-sink-kafka/@tcp-sink.version@/tcp-sink-kafka-@tcp-sink.version@-metadata.jar
 sink.throughput=https://@repo-spring-io@/org/springframework/cloud/stream/app/throughput-sink-kafka/@throughput-sink.version@/throughput-sink-kafka-@throughput-sink.version@.jar
 sink.throughput.metadata=https://@repo-spring-io@/org/springframework/cloud/stream/app/throughput-sink-kafka/@throughput-sink.version@/throughput-sink-kafka-@throughput-sink.version@-metadata.jar
+sink.twitter-message=https://@repo-spring-io@/org/springframework/cloud/stream/app/twitter-message-sink-kafka/@twitter-message-sink.version@/twitter-message-sink-kafka-@twitter-message-sink.version@.jar
+sink.twitter-message.metadata=https://@repo-spring-io@/org/springframework/cloud/stream/app/twitter-message-sink-kafka/@twitter-message-sink.version@/twitter-message-sink-kafka-@twitter-message-sink.version@-metadata.jar
+sink.twitter-update=https://@repo-spring-io@/org/springframework/cloud/stream/app/twitter-update-sink-kafka/@twitter-update-sink.version@/twitter-update-sink-kafka-@twitter-update-sink.version@.jar
+sink.twitter-update.metadata=https://@repo-spring-io@/org/springframework/cloud/stream/app/twitter-update-sink-kafka/@twitter-update-sink.version@/twitter-update-sink-kafka-@twitter-update-sink.version@-metadata.jar
 sink.websocket=https://@repo-spring-io@/org/springframework/cloud/stream/app/websocket-sink-kafka/@websocket-sink.version@/websocket-sink-kafka-@websocket-sink.version@.jar
 sink.websocket.metadata=https://@repo-spring-io@/org/springframework/cloud/stream/app/websocket-sink-kafka/@websocket-sink.version@/websocket-sink-kafka-@websocket-sink.version@-metadata.jar
 processor.bridge=https://@repo-spring-io@/org/springframework/cloud/stream/app/bridge-processor-kafka/@bridge-processor.version@/bridge-processor-kafka-@bridge-processor.version@.jar
@@ -74,3 +88,5 @@ processor.splitter=https://@repo-spring-io@/org/springframework/cloud/stream/app
 processor.splitter.metadata=https://@repo-spring-io@/org/springframework/cloud/stream/app/splitter-processor-kafka/@splitter-processor.version@/splitter-processor-kafka-@splitter-processor.version@-metadata.jar
 processor.transform=https://@repo-spring-io@/org/springframework/cloud/stream/app/transform-processor-kafka/@transform-processor.version@/transform-processor-kafka-@transform-processor.version@.jar
 processor.transform.metadata=https://@repo-spring-io@/org/springframework/cloud/stream/app/transform-processor-kafka/@transform-processor.version@/transform-processor-kafka-@transform-processor.version@-metadata.jar
+processor.twitter-trend=https://@repo-spring-io@/org/springframework/cloud/stream/app/twitter-trend-processor-kafka/@twitter-trend-processor.version@/twitter-trend-processor-kafka-@twitter-trend-processor.version@.jar
+processor.twitter-trend.metadata=https://@repo-spring-io@/org/springframework/cloud/stream/app/twitter-trend-processor-kafka/@twitter-trend-processor.version@/twitter-trend-processor-kafka-@twitter-trend-processor.version@-metadata.jar
