--- a/functions/consumer/cassandra-consumer/pom.xml
+++ b/functions/consumer/cassandra-consumer/pom.xml
@@ -15,7 +15,7 @@
 	</parent>
 
 	<properties>
-		<springIntegrationCassandara.version>0.8.0.BUILD-SNAPSHOT</springIntegrationCassandara.version>
+		<springIntegrationCassandara.version>0.8.0.RELEASE</springIntegrationCassandara.version>
 		<cassandra-unit-spring.version>4.3.1.0</cassandra-unit-spring.version>
 	</properties>
 
