add semantic segmentation function. add object detecteion function readme

--- a/functions/pom.xml
+++ b/functions/pom.xml
@@ -81,7 +81,7 @@
 		<module>function/twitter-function</module>
 		<module>function/image-recognition-function</module>
 		<module>function/object-detection-function</module>
-
+		<module>function/semantic-segmentation-function</module>
 
 		<module>supplier/file-supplier</module>
 		<module>supplier/ftp-supplier</module>
