--- a/applications/processor/image-recognition-processor/pom.xml
+++ b/applications/processor/image-recognition-processor/pom.xml
@@ -60,9 +60,9 @@
 
                     <dependencies>
                         <dependency>
-                            <groupId>org.springframework.cloud.fn</groupId>
-                            <artifactId>image-recognition-function</artifactId>
-                            <version>${java-functions.version}</version>
+                            <groupId>org.springframework.cloud.stream.app</groupId>
+                            <artifactId>image-recognition-processor</artifactId>
+                            <version>${project.version}</version>
                         </dependency>
                     </dependencies>
 
