--- a/functions/common/ftp-common/pom.xml
+++ b/functions/common/ftp-common/pom.xml
@@ -4,7 +4,7 @@
     <artifactId>ftp-common</artifactId>
     <version>1.0.0-SNAPSHOT</version>
     <name>ftp-common</name>
-    <description>file consumer</description>
+    <description>ftp common</description>
 
     <parent>
         <groupId>org.springframework.cloud.fn</groupId>
