--- a/functions/pom.xml
+++ b/functions/pom.xml
@@ -90,6 +90,7 @@
 		<module>supplier/jms-supplier</module>
 		<module>supplier/mongodb-supplier</module>
 		<module>supplier/mqtt-supplier</module>
+		<module>supplier/sftp-supplier</module>
 		<module>supplier/tcp-supplier</module>
 		<module>supplier/time-supplier</module>
 		<module>supplier/rabbit-supplier</module>
